--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 
-spring.data.mongodb.uri=mongodb://mishpahug:project2018@ds159634.mlab.com:59634/mishpahug2018
+
+spring.data.mongodb.uri =mongodb+srv://user1:dCKIIeSZcWsABoZl@cluster0.qdywa.mongodb.net/SpringBootExam?retryWrites=true&w=majority
 exp.value=30
+
